Add movies pagination
